Added relationship between guest and baggage.

--- a/traveling-demo/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/traveling-demo/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,3 +1,6 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Wed Jul 15 09:54:38 BST 2015
+#Thu Jul 16 10:01:20 BST 2015
+build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;
+org.springsource.ide.eclipse.gradle.classname.enableSorting=false
+org.springsource.ide.eclipse.gradle.classpath.enableSorting=true
 org.springsource.ide.eclipse.gradle.rootprojectloc=
