Added test for REST service.

--- a/traveling-demo/src/main/resources/application.properties
+++ b/traveling-demo/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.jpa.properties.hibernate.hbm2ddl.auto=validate
 spring.datasource.initialize=true
 spring.datasource.data=classpath*:data.sql
+
+travelingdemo.seatsmap.columns=6
+travelingdemo.seatsmap.rows=25
